@@ -3,6 +3,7 @@ package org.astral.spectyle.hytale.events.visuals;
 import com.hypixel.hytale.math.vector.Vector3d;
 import com.hypixel.hytale.math.vector.Vector3f;
 import com.hypixel.hytale.math.vector.Vector3i;
+import org.astral.spectyle.hytale.configuration.VisualsConfig.VisualPreset;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.Collection;
@@ -16,19 +17,19 @@ public final class VisualizerManager {
 
     private VisualizerManager() {}
 
-    public static @NotNull String start(String requestedName, String type, int maxHeight, double spacing, Vector3d pos, Vector3f rot) {
+    public static @NotNull String start(String requestedName, VisualPreset preset, Vector3d pos, Vector3f rot) {
         String finalName = requestedName;
 
-        if (finalName == null || finalName.trim().isEmpty()) {
+        if (finalName == null || finalName.isBlank()) {
             int count = 1;
-            String baseName = type.equals("blocks") ? "visualBlock " : "visualParticle ";
+            String baseName = preset.isBlocks() ? "visualBlock_" : "visualParticle_";
             while (activeVisualizers.containsKey(baseName + count)) {
                 count++;
             }
             finalName = baseName + count;
         }
 
-        activeVisualizers.put(finalName, new VisualizerData(finalName, type, maxHeight, spacing, pos, rot));
+        activeVisualizers.put(finalName, new VisualizerData(finalName, preset, pos, rot));
         return finalName;
     }
 
@@ -46,28 +47,36 @@ public final class VisualizerManager {
 
     public static class VisualizerData {
         private final String name;
-        private final String type;
-        private final int maxHeight;
-        private final double spacing;
+        private final VisualPreset preset;
         private final Vector3d pos;
         private final Vector3f rot;
         private final Set<Vector3i> activeBlocks = ConcurrentHashMap.newKeySet();
 
-        public VisualizerData(String name, String type, int maxHeight, double spacing, Vector3d pos, Vector3f rot) {
+        public VisualizerData(String name, VisualPreset preset, Vector3d pos, Vector3f rot) {
             this.name = name;
-            this.type = type;
-            this.maxHeight = maxHeight;
-            this.spacing = spacing;
+            this.preset = preset;
             this.pos = pos;
             this.rot = rot;
         }
 
-        public String getName() { return name; }
-        public String getType() { return type; }
-        public int getMaxHeight() { return maxHeight; }
-        public double getSpacing() { return spacing; }
-        public Vector3d getPos() { return pos; }
-        public Vector3f getRot() { return rot; }
-        public Set<Vector3i> getActiveBlocks() { return activeBlocks; }
+        public String getName() {
+            return name;
+        }
+
+        public VisualPreset getPreset() {
+            return preset;
+        }
+
+        public Vector3d getPos() {
+            return pos;
+        }
+
+        public Vector3f getRot() {
+            return rot;
+        }
+
+        public Set<Vector3i> getActiveBlocks() {
+            return activeBlocks;
+        }
     }
 }
